--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         config {
             keyAlias 'BookReade'
             keyPassword 'wazsj6457'
-            storeFile file('E:/AndroidProject/BookReader/wpf.jks')
+            storeFile file('../wpf.jks')
             storePassword 'wazsj6457'
         }
     }
@@ -43,10 +43,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'me.majiajie:pager-bottom-tab-strip:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.zhaokaiqiang.klog:library:1.5.0'
